docs: update JVM memory documentation with enhanced SVG diagrams for clarity